--- a/CSS/mediaQuery.css
+++ b/CSS/mediaQuery.css
@@ -39,91 +39,46 @@
   #home_image2 img{
     position: absolute;
   }
+   .img-me{
+    margin-top: 50px; 
+    margin-left: 150px;
+    width:300px;
+    height:400px;
+  } 
     
-  .homePageTitleBox{
-    display: inline-block;
-    box-sizing: border-box;
-    position: relative;
-    background:red;
-    background: white;
-    max-width: 500px;
-    margin-left: 100px;
-    margin-top: 150px;
+ .education{
+    margin-left: 150px; 
+    margin-right: 100px;
+    }
+    
+ .edu {
+    width: auto;
+    background: #f3f3f3;
+    border-bottom: solid 4px #eeeeee;
+    padding: 22px 47px 6px 47px;
+    margin-left: 0px;
+    margin-top: 40px;
+    text-align: left;
+}
+.experiance{
+    margin-left: 30px; 
+    margin-right: 30px;
+    }
+    
+  .vr {
+    width:2px;
+    background-color:#f3f3f3;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:150px;
   }
-  .homePageDiscriptionBox{
-  background: white;
-   overflow: hidden;
-   max-width: 400px;
-   margin: 50px;
-   margin-left: 100px;
-  }
-  .homePageTitle {
-    letter-spacing: .17em;
-    font-size: 2.5em;
-  }
-  .homePageDiscription{
-    letter-spacing: .1em;
-    font-size: 1.1em;
-  }
-  .homeAnimal{
-    padding-top: 0px;
-    width: 100%;
-    float:left;
-  }
-  #quickLinks{
-      width: 30%;
-      float:left;
-  }
-  #aboutUsImg{
-  background: url(../img/AboutUs.jpg);
-  padding-top:50px;
-  padding-left:30px;
-  width:100%;
-  height:600px;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  }
-  #aboutUsImg img{
-    position: absolute;
-  }
-  #aboutUs{
-    padding-left: 100px;
-  }
-  #servicesImg{
-  background: url(../img/services.jpg);
-  padding-top:100px;
-  width:100%;
-  height:500px;
-  background-size:  cover;
-  background-repeat: no-repeat;
-  overflow:auto;
-  }
-  #servicesImg img {
-    position: relative;;
-  }
-  #news{
-    padding-left: 20%;
-    padding-right: 20%;
-    text-align: center;
-  }
-  #services{
-    padding-left: 100px;
-  }
-  .team{
-    padding-left: 100px;
-  }
-  #contactUsForm{
-    padding-left: 100px;
-  }
-  .img-thumbnails{
-    padding-top: 30px;
-    width:95%;
-    height:200px;
-  }
+  
+  
 }
 @media only screen and (min-width:766px) and (max-width:989px)  {
   #home_image{
-    background: url(../web-design-header.png);
+    background: url(../img/header.jpg);
     width: 100%;
     height: 450px;
     background-repeat: no-repeat;
@@ -134,243 +89,7 @@
     position: absolute;
   }
   #home_image1{
-    background: url(../img/homeImg1.jpg);
-    width: 100%;
-    height: 350px;
-    resize:horizontal;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    display: block;
-  }
-  #home_image1 img{
-    position: absolute;
-  }
-  .homePageTitleBox{
-    display: inline-block;
-    box-sizing: border-box;
-    position: relative;
-    background:red;
-    background: white;
-    max-width: 400px;
-    margin-left: 70px;
-    margin-top: 150px;
-  }
-  .homePageDiscriptionBox{
-  background: white;
-   overflow: hidden;
-   max-width: 300px;
-   margin: 50px;
-   margin-left: 70px;
-  }
-  .homePageTitle {
-    letter-spacing: .17em;
-    font-size: 2.0em;
-  }
-  .homePageDiscription{
-    letter-spacing: .1em;
-    font-size: 1.0em;
-  }
-  #quickLinks{
-      width: 30%;
-      float:left;
-  }
-  .homeAnimal{
-    padding-top: 30px;
-    width: 30%;
-    float:left;
-  }
-  #servicesImg{
-  background: url(../img/services.jpg);
-  padding-top:100px;
-  width:100%;
-  height:500px;
-  background-size:  cover;
-  background-repeat: no-repeat;
-  overflow:auto;
-  }
-  #servicesImg img {
-    position: relative;;
-  }
-    #aboutUsImg{
-    background: url(../img/AboutUs.jpg);
-    padding-top:50px;
-    width:100%;
-    height:500px;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    }
-    #aboutUsImg img{
-      position: absolute;
-    }
-    #aboutUs{
-      padding-left: 50px;
-    }
-    #news{
-      padding-left: 20%;
-      padding-right: 20%;
-      text-align: center;
-    }
-    #services{
-      padding-left: 100px;
-    }
-    .team{
-      padding-left: 100px;
-    }
-    #contactUsForm{
-      padding-left: 100px;
-    }
-    .img-thumbnails{
-      padding-top: 30px;
-      width:95%;
-      height:150px;
-    }
-}
-@media only screen and (min-width:459px) and (max-width:765px)  {
-  #home_image{
-    background: url(../img/header2.jpg);
-    width: 100%;
-    height: 450px;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-  #home_image img{
-    position: absolute;
-  }
-  #home_image1{
-    background: url(../img/homeImg1.jpg);
-    width: 100%;
-    height: 350px;
-    resize:horizontal;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    display: block;
-  }
-  #home_image1 img{
-    position: absolute;
-  }
-  .homePageTitleBox{
-    display: inline-block;
-    box-sizing: border-box;
-    position: relative;
-    background:red;
-    background: white;
-    max-width: 300px;
-    margin-left: 30px;
-    margin-top: 100px;
-  }
-  .homePageDiscriptionBox{
-  background: white;
-   overflow: hidden;
-   max-width: 270px;
-   margin: 20px;
-   margin-left: 30px;
-  }
-  .homePageTitle {
-    letter-spacing: .15sem;
-    font-size: 1.5em;
-  }
-  .homePageDiscription{
-    letter-spacing: .08em;
-    font-size: .8em;
-  }
-  .homeAnimal{
-    padding-top: 30px;
-    width: 30%;
-    float:left;
-  }
-    #quickLinks{
-        width: 40%;
-        float:left;
-    }
-    .homeContent{
-      padding-left: 30px;
-    }
-    #tour{
-        width: 40%;
-        float:left;
-    }
-    #news{
-    padding-left: 20%;
-    padding-right: 20%;
-    text-align: center;
-    }
-    .vets{
-      display: flex;
-      flex-flow: column;
-    }
-    .mainVet{
-      order: 1;
-    }
-    .teamVets{
-      order: 2;
-    }
-
-      #aboutUsImg{
-      background: url(../img/AboutUs.jpg);
-      padding-top:50px;
-      width:100%;
-      height:500px;
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
-      }
-      #aboutUsImg img{
-        position: absolute;
-      }
-      #aboutUs{
-        padding-left: 50px;
-      }
-    #servicesImg{
-    background: url(../img/services.jpg);
-    padding-top:100px;
-    width:100%;
-    height:300px;
-    background-size:  cover;
-    background-repeat: no-repeat;
-    overflow:auto;
-    }
-    #servicesImg img {
-      position: relative;;
-    }
-    #news{
-      padding-left: 20%;
-      padding-right: 20%;
-      text-align: center;
-    }
-    #services{
-      padding-left: 50px;
-    }
-    .team{
-      padding-left: 50px;
-    }
-    #contactUsForm{
-      padding-left: 50px;
-      padding-right: 30px;
-
-    }
-    .img-thumbnails{
-      padding-top: 30px;
-      width:95%;
-      height:200px;
-    }
-}
-
-@media only screen and (min-width:0px) and (max-width:460px)  {
-  #home_image{
-    background: url(../img/header3.jpg);
-    width: 100%;
-    height: 350px;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-  #home_image img{
-    position: absolute;
-  }
-  #home_image1{
-    background: url(../img/homeImg1.jpg);
+    background: url(../img/header5.jpg);
     width: 100%;
     height: 250px;
     resize:horizontal;
@@ -382,92 +101,167 @@
   #home_image1 img{
     position: absolute;
   }
-  .homePageTitle{
-    display: none;
-  }
-  .homePageDiscription{
-      display: none;
-  }
-  .homeAnimal{
-    padding-top:30px;
-    width: 30%;
-    float:left;
-  }
-  .homeContent{
-    padding-left: 30px;
-  }
-    #quickLinks{
-        width: 100%;
-        align: middle;
-    }
-    #tour{
-        width: 100%;
-        align: middle;
-    }
-    #news{
-    text-align: center;
-    }
-
-    #aboutUsVdo {
-    }
-
-    .vets{
-      display: flex;
-      flex-flow: column;
-    }
-    .mainVet{
-      order: 1;
-    }
-    .teamVets{
-      order: 2;
-    }
-
-      #aboutUsImg{
-      background: url(../img/AboutUs.jpg);
-      padding-top:50px;
-      width:100%;
-      height:400px;
-      align: middle;
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
-      }
-      #aboutUsImg img{
-        position: absolute;
-      }
-      #aboutUs{
-        padding-left: 30px;
-      }
-    #servicesImg{
-    background: url(../img/services.jpg);
-    padding-top:100px;
-    width:100%;
-    height:200px;
-    background-size:  cover;
+  
+ #home_image2{
+    background: url(../img/header6.jpg);
+    width: 100%;
+    height: 250px;
+    resize:horizontal;
     background-repeat: no-repeat;
-    overflow:auto;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    display: block;
+  }
+  #home_image2 img{
+    position: absolute;
+  }
+   .img-me{
+    margin-top: 50px; 
+    margin-left: 150px;
+    width: 300px;
+    height: 400px;
+  } 
+ .education{
+    margin-left: 100px; 
+    margin-right: 75px;
     }
-    #servicesImg img {
-      position: relative;;
+    
+.edu {
+    width: auto;
+    background: #f3f3f3;
+    border-bottom: solid 4px #eeeeee;
+    padding: 22px 47px 6px 47px;
+    margin-left: 0px;
+     margin-top: 40px;
+    text-align: left;
+}
+.experiance{
+    margin-left: 30px; 
+    margin-right: 30px;
     }
-    #news{
-      padding-left: 20%;
-      padding-right: 20%;
-      text-align: center;
-    }
-    #services{
-      padding-left: 30px;
-    }
-    .team{
-      padding-left: 30px;
-    }
-    #contactUsForm{
-      padding-left: 30px;
-      padding-right: 30px;
-    }
-    .img-thumbnails{
-      padding-top: 30px;
-      width:85%;
-      height:200px;
-    }
+}
 
+@media only screen and (min-width:459px) and (max-width:765px)  {
+  #home_image{
+    background: url(../img/header.jpg);
+    width: 100%;
+    height: 450px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+  }
+  #home_image img{
+    position: absolute;
+  }
+  #home_image1{
+    background: url(../img/header5.jpg);
+    width: 100%;
+    height: 200px;
+    resize:horizontal;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    display: block;
+  }
+  #home_image1 img{
+    position: absolute;
+  }
+  
+     #home_image2{
+    background: url(../img/header6.jpg);
+    width: 100%;
+    height: 200px;
+    resize:horizontal;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    display: block;
+  }
+  #home_image2 img{
+    position: absolute;
+  }
+     
+  .img-me{
+    margin-top: 50px;
+    margin-left: 150px;
+    width:300px;
+    height:400px;
+  }
+  .education{
+    margin-left: 50px; 
+    margin-right: 50px;
+    }
+    
+  .edu {
+    width: auto;
+    background: #f3f3f3;
+    border-bottom: solid 4px #eeeeee;
+    padding: 22px 20px 6px 20px;
+    margin-left: 0px;
+     margin-top: 40px;
+    text-align: left;
+}
+.experiance{
+    margin-left: 30px; 
+    margin-right: 30px;
+    }
+}
+
+@media only screen and (min-width:0px) and (max-width:460px)  {
+  #home_image{
+    background: url(../img/header.jpg);
+    width: 100%;
+    height: 350px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+  }
+  #home_image img{
+    position: absolute;
+  }
+  #home_image1{
+    background: url(../img/header5.jpg);
+    width: 100%;
+    height: 150px;
+    resize:horizontal;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    display: block;
+  }
+  #home_image1 img{
+    position: absolute;
+  }
+  
+  #home_image2{
+    background: url(../img/header6.jpg);
+    width: 100%;
+    height: 150px;
+    resize:horizontal;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    display: block;
+  }
+  #home_image2 img{
+    position: absolute;
+  }
+
+  .education{
+    margin-left: 30px; 
+    margin-right: 30px;
+    }
+    .edu {
+    width: auto;
+    background: #f3f3f3;
+    border-bottom: solid 4px #eeeeee;
+    padding: 22px 20px 6px 20px;
+    margin-left: 0px;
+     margin-top: 40px;
+    text-align: left;
+}
+    .experiance{
+    margin-left: 30px; 
+    margin-right: 30px;
+    }
 }
