--- a/CSS/mediaQuery.css
+++ b/CSS/mediaQuery.css
@@ -25,7 +25,7 @@
   #home_image1 img{
     position: absolute;
   }
-    
+
     #home_image2{
     background: url(../img/header6.jpg);
     width: 100%;
@@ -40,17 +40,23 @@
     position: absolute;
   }
    .img-me{
-    margin-top: 50px; 
+    margin-top: 50px;
     margin-left: 150px;
-    width:300px;
-    height:400px;
-  } 
-    
+    width:350px;
+    height:350px;
+    -moz-box-shadow: 0px 6px 5px #ccc;
+    -webkit-box-shadow: 0px 6px 5px #ccc;
+    box-shadow: 0px 6px 5px #ccc;
+    -moz-border-radius:350px;
+    -webkit-border-radius:350px;
+    border-radius:350px;
+  }
+
  .education{
-    margin-left: 150px; 
+    margin-left: 150px;
     margin-right: 100px;
     }
-    
+
  .edu {
     width: auto;
     background: #f3f3f3;
@@ -61,10 +67,10 @@
     text-align: left;
 }
 .experiance{
-    margin-left: 30px; 
-    margin-right: 30px;
+    margin-left: 150px;
+    margin-right: 100px;
     }
-    
+
   .vr {
     width:2px;
     background-color:#f3f3f3;
@@ -73,8 +79,10 @@
     bottom:0;
     left:150px;
   }
-  
-  
+
+  .exp .vr{
+    background-color:#5d5d63;
+}
 }
 @media only screen and (min-width:766px) and (max-width:989px)  {
   #home_image{
@@ -101,7 +109,7 @@
   #home_image1 img{
     position: absolute;
   }
-  
+
  #home_image2{
     background: url(../img/header6.jpg);
     width: 100%;
@@ -116,16 +124,16 @@
     position: absolute;
   }
    .img-me{
-    margin-top: 50px; 
+    margin-top: 50px;
     margin-left: 150px;
     width: 300px;
     height: 400px;
-  } 
+  }
  .education{
-    margin-left: 100px; 
+    margin-left: 100px;
     margin-right: 75px;
     }
-    
+
 .edu {
     width: auto;
     background: #f3f3f3;
@@ -136,8 +144,8 @@
     text-align: left;
 }
 .experiance{
-    margin-left: 30px; 
-    margin-right: 30px;
+    margin-left: 100px;
+    margin-right: 75px;
     }
 }
 
@@ -166,7 +174,7 @@
   #home_image1 img{
     position: absolute;
   }
-  
+
      #home_image2{
     background: url(../img/header6.jpg);
     width: 100%;
@@ -180,7 +188,7 @@
   #home_image2 img{
     position: absolute;
   }
-     
+
   .img-me{
     margin-top: 50px;
     margin-left: 150px;
@@ -188,10 +196,10 @@
     height:400px;
   }
   .education{
-    margin-left: 50px; 
+    margin-left: 50px;
     margin-right: 50px;
     }
-    
+
   .edu {
     width: auto;
     background: #f3f3f3;
@@ -202,8 +210,8 @@
     text-align: left;
 }
 .experiance{
-    margin-left: 30px; 
-    margin-right: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
     }
 }
 
@@ -232,7 +240,7 @@
   #home_image1 img{
     position: absolute;
   }
-  
+
   #home_image2{
     background: url(../img/header6.jpg);
     width: 100%;
@@ -248,7 +256,7 @@
   }
 
   .education{
-    margin-left: 30px; 
+    margin-left: 30px;
     margin-right: 30px;
     }
     .edu {
@@ -261,7 +269,7 @@
     text-align: left;
 }
     .experiance{
-    margin-left: 30px; 
+    margin-left: 30px;
     margin-right: 30px;
     }
 }
